--- a/frontend/src/styles/Dashboard.module.css
+++ b/frontend/src/styles/Dashboard.module.css
@@ -7,11 +7,6 @@
     padding: 0;
 }
 
-.sidenav {
-    width: 300px;
-    flex-shrink: 0; /* Prevents shrinking of the navbar */
-}
-
 .content {
     width: 100%;
     height: 100vh;
@@ -28,12 +23,30 @@
     width: 100%;
     display: flex; 
     flex-wrap: wrap; 
-    gap: 40px; 
-    justify-content: space-between;
+    gap: 30px; 
 }
 
 .box {
-    height: 180px;
-    width: 300px;
+    height: 150px;
+    width: 250px;
     background-color: gray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.boxItems {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.boxLink {
+    text-decoration: none;
+    color: inherit; /* Keeps the original text color */
+}
+  
+.boxLink:hover {
+    cursor: pointer;
+    opacity: 0.8; /* Slight transparency on hover */
 }
