--- a/frontend/src/styles/Registration.module.css
+++ b/frontend/src/styles/Registration.module.css
@@ -63,7 +63,6 @@
 .header {
     background-color: lightgrey;
     display: flex;
-    justify-content: space-between;
     padding-left: 30px;
     padding-right: 30px;
     height: 30px;
@@ -95,10 +94,16 @@
     padding: 0;
 }
 
+.rowContainer {
+    border-bottom: 1px solid lightgrey;
+    display: flex;
+    width: 95%; 
+    left: 30px
+}
+
 .row {
     display: flex;
-    justify-content: space-between;
-    padding-left: 30px;
+    padding-left: 35px;
     padding-right: 30px;
     height: 35px;
     box-sizing: border-box;
@@ -112,6 +117,60 @@
     position: absolute;
     bottom: 0;
     width: 95%; 
-    border-bottom: 1px solid lightgrey;
-    left: 30px
+}
+
+.metricRow {
+    display: flex;
+    column-gap: 10px;
+}
+
+.activeMetrics {
+    display: flex;
+    width: 50%;
+    justify-content: space-around;
+    margin-bottom: -15px
+}
+
+.activeHeader {
+    width: 80%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.popup {
+    background-color: rgb(212, 212, 212);
+    position: absolute;
+    bottom: 49%;
+    height: 200px;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 20px;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.buttonContainer {
+    display: flex;
+    width: 90%;
+    justify-content: center;
+    gap: 20px;
+}
+
+.messageContainer {
+    height: 130px;
+    width: 80%
+}
+
+.popupMessage {
+    font-size: 13pt;
+}
+
+.confirmButton {
+    height: 35px;
+    border: none;
+    border-radius: 5px;
+    width: 80px
 }
