--- a/frontend/src/styles/Registration.module.css
+++ b/frontend/src/styles/Registration.module.css
@@ -16,6 +16,14 @@
     box-sizing: border-box;
 }
 
+.resultsBox {
+    padding-bottom: 60px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Center the row containers */
+}
+
 .activeRegistration {
     height: 250px;
     width: 85%;
@@ -75,11 +83,6 @@
     font-weight: 500;
 }
 
-.resultsBox {
-    padding-bottom: 60px;
-    height: 100%;
-}
-
 .noResultsContainer {
     width: 100%;
     display: flex;
@@ -95,15 +98,15 @@
 }
 
 .rowContainer {
-    border-bottom: 1px solid lightgrey;
     display: flex;
     width: 95%; 
-    left: 30px
+    border-bottom: 1px solid lightgrey;
+    left: 30px;
 }
 
 .row {
     display: flex;
-    padding-left: 35px;
+    padding-left: 15px;
     padding-right: 30px;
     height: 35px;
     box-sizing: border-box;
@@ -114,9 +117,7 @@
 
 .row::after {
     content: "";
-    position: absolute;
-    bottom: 0;
-    width: 95%; 
+
 }
 
 .metricRow {
