--- a/frontend/src/styles/InstructorClassroom.module.css
+++ b/frontend/src/styles/InstructorClassroom.module.css
@@ -7,24 +7,55 @@
 }
 
 .content {
-    width: 100%;
     height: 100vh;
     display: flex;
     align-items: center;
     flex-direction: column;
     padding-top: 50px;
     box-sizing: border-box;
+    margin-left: 250px;
+    padding-left: 5%;
+    width: 100%
+}
+.main{
+    width: 100%;
+    display: flex;
 }
 
+.addButton {
+    height: 45px;
+    outline: none;
+    border-radius: 5px;
+    background-color: #dddddd;
+    border: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 120px;
+    justify-content: space-around;
+}
+
+.title {
+    display: flex;
+    width: 100%;
+    align-items: center;
+}
+.titleText {
+    width: 700px
+}
 .rowContainer {
     display: flex;
-    width: 95%; 
+    width: 100%; 
     border-bottom: 1px solid lightgrey;
     left: 30px;
+    justify-content: space-between;
+    height: 35px;
+    align-items: center;
+    padding-left: 10px
 }
 
 .popup {
-    background-color: rgb(248, 244, 241);
+    background-color: rgba(255, 255, 255, 0.966);
     border-radius: 20px;
     width: 450px;
     height: 500px;
@@ -43,6 +74,7 @@
     width: 100%;
     padding: 0 30px;
     box-sizing: border-box;
+    
 }
 
 .formRow {
@@ -76,4 +108,58 @@
     width: 150px;
     height: 50px;
     margin-top: 50px;
+}
+
+.listContainer {
+    width: 70%
+}
+
+.listContent {
+    width: 100%;
+}
+
+.listHeader {
+    background-color: rgb(43, 43, 43);
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0 10px;
+    box-sizing: border-box;
+}
+
+.headerLabel {
+    height: 40px;
+    display: flex;
+    align-items: center;
+}  
+
+.filterContainer {
+    background-color: rgb(255, 255, 255);
+    height: 100%;
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.filterContent {
+    background-color: #e6e6e6;
+    border-radius: 15px;
+    height: 97%;
+    width: 95%;
+    padding: 0 20px;
+    box-sizing: border-box;
+}
+
+.headerText {
+    padding: 0;
+    margin: 0
+}
+
+.label{
+    padding: 0;
+    margin: 0;
+    color: rgb(235, 235, 235);
+    font-weight: 500;
 }
