--- a/frontend/src/styles/InstructorClassroom.module.css
+++ b/frontend/src/styles/InstructorClassroom.module.css
@@ -41,7 +41,7 @@
     align-items: center;
 }
 .titleText {
-    width: 700px
+    width: 575px
 }
 .rowContainer {
     display: flex;
@@ -111,7 +111,7 @@
 }
 
 .listContainer {
-    width: 70%
+    width: 65%
 }
 
 .listContent {
@@ -137,16 +137,19 @@
 .filterContainer {
     background-color: rgb(255, 255, 255);
     height: 100%;
-    width: 30%;
+    width: 25%;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: fixed;
+    right: 0;
+    top:0
 }
 
 .filterContent {
-    background-color: #e6e6e6;
+    background-color: #e2e2e2;
     border-radius: 15px;
-    height: 97%;
+    height: 90%;
     width: 95%;
     padding: 0 20px;
     box-sizing: border-box;
